fixed rewards alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,7 +27,7 @@
     flex: 1;
     display: flex;
     justify-content: flex-end;
-    
+
 }
 
 .header-image {
@@ -44,13 +44,16 @@
     margin-top: 10rem;
     top: 0;
 }
+
 .text-container p {
     font-size: 1.1rem;
 }
+
 .header-btn {
     margin-top: 2rem;
-    
+
 }
+
 .achiev {
     margin-top: 6rem;
     font-weight: 500;
@@ -67,4 +70,8 @@
 .rewards {
     display: flex;
     gap: 1rem;
+}
+
+.reward2 {
+    margin-top: 0.3rem;
 }
